--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ionic-native/core": "^5.24.0",
     "@ionic-native/file": "^5.24.0",
     "@ionic/react": "^5.0.7",
+    "@ionic/react-hooks": "0.0.6",
     "@ionic/react-router": "^5.0.7",
     "@stencil/redux": "^0.1.2",
     "@testing-library/jest-dom": "^4.2.4",
