--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@capacitor/core": "^2.0.1",
+    "@capacitor/ios": "^2.0.1",
     "@ionic-native/core": "^5.24.0",
     "@ionic-native/file": "^5.24.0",
     "@ionic/react": "^5.0.7",
